--- a/jsfabrica/src/app/bia-c-vendas/vendas.module.css
+++ b/jsfabrica/src/app/bia-c-vendas/vendas.module.css
@@ -15,7 +15,7 @@
     background: linear-gradient(to bottom, #000, #530c0c);
     border-radius: 10px;
     padding: 20px;
-    width: 700px;
+    width: 800px;
     height: 400px;
     max-width: 600px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
@@ -51,12 +51,12 @@
   }
   
   .label {
+    display: block;
     font-family: "Jockey One", sans-serif;
     color: #a09a9a;
     text-align: left;
-    margin: 0 ;
-    margin-bottom: 25px; 
-    width: 80%;
+    margin: 0 0 5px 10%; 
+    width: 80%; 
     
   }
   
@@ -67,8 +67,8 @@
   .input {
     height: 40px;
     border-radius: 7px;
-    width: 80%;
-    margin: 0 auto;
+    width: 80%; 
+    margin: 0 auto 20px auto; 
     background-color: #c4c4c4;
     font-family: "Jockey One", sans-serif;
   }
