--- a/jsfabrica/src/app/mari_telaplanos/planos.module.css
+++ b/jsfabrica/src/app/mari_telaplanos/planos.module.css
@@ -20,13 +20,22 @@
 }
 
 .planos {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  /*display: flex;
   justify-content: space-around;
-  width: 80%;
+  width: 80%;*/
 }
 
 .plano {
-  background-color: #333;
   color: white;
   border-radius: 10px;
   padding: 20px;
@@ -40,9 +49,15 @@
 }
 
 .preco {
+  background-color: #333;
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 20px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  width: 250px;
+ /* width: 300px;*/
 }
 
 .plano ul {
