--- a/jsfabrica/src/app/mari_Registro-aparelho/aparelho.module.css
+++ b/jsfabrica/src/app/mari_Registro-aparelho/aparelho.module.css
@@ -1,1 +1,49 @@
-/* hhgggh */
+.title {
+    text-align: center;
+    color: #fff;
+    font-size: 40px;
+    font-family: "Gentium Plus", serif;
+    font-weight: 100;
+}
+
+.table {
+    border: 1px solid #fff;
+    border-collapse: collapse;
+    margin: auto;
+    margin-top: 1%;
+    width: 90%;
+}
+
+
+
+.botaoPrimario {
+    background-color: #D23636;
+    color: #E5E5E5;
+    margin-top: 30px;
+    margin-left: 25px;
+    width: 200px;
+    height: 40px;
+    font-family: "Jockey One", sans-serif;
+    border: none;
+    cursor: pointer;
+}
+
+.botaoSecundario {
+    background-color: #D23636;
+    color: #E5E5E5;
+    margin-top: 30px;
+    width: 200px;
+    height: 40px;
+    margin-left: 1450px;
+    margin-bottom: 140px;
+    font-family: "Jockey One", sans-serif;
+    border: none;
+    cursor: pointer;
+}
+
+.botoes {
+    display: flex;
+    justify-content: space-between; 
+    width: 90%;
+    margin: 20px auto 0 auto;
+}
