--- a/jsfabrica/src/components/Header/Header.module.css
+++ b/jsfabrica/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
   padding: 0.5rem 1rem;
   background-color: var(--backgroundnav);
   color: var(--text-color);
+  height: 100px;
 }
 
 .headerDiv {
@@ -19,6 +20,8 @@
   padding: 20px 40px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
   width: 100vw;
+  position: relative; /* Adicionado para controlar melhor o z-index */
+  z-index: 100;
 }
 
 .titulo{
@@ -37,6 +40,7 @@
   max-width: 410px;
   right: 20px;
   flex-grow: 1;
+
 }
 
 
@@ -45,22 +49,23 @@
   position: relative;
 }
 
-.itemMenu:hover .subMenu {
-  max-height: 100vh;
-}
+
 
 .subMenu {
   position: absolute;
-  left: 0px;
+  left: 0;
   width: max-content;
   max-height: 0;
   background-color: #000000;
   overflow: hidden;
   border-radius: 5px;
-  transition: 1s;
-  transition-duration: 820ms;
+  transition: max-height 0.3s ease-in-out;
+  z-index: 10; 
 }
 
+.itemMenu:hover .subMenu {
+  max-height: 200px; 
+}
 .subMenu a {
   display: block;
   color: #fff;
@@ -165,23 +170,43 @@
     align-items: flex-start;
     justify-content: flex-start;
     position: fixed;
-    top: 90px;
+    top: 80px;
     right: -300px;
     width: 250px;
     height: 100vh;
+    height: calc(100vh - 90px);
     background: #530000;
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     padding: 20px 0 0 10px;
     transition: 0.3s ease-in-out;
+    z-index: 1000;
+  }
+
+  .subMenu {
+    position: relative;
+    width: 100%;
+    max-height: 0;
+  }
+
+  .itemMenu:hover .subMenu {
+    max-height: 300px;
+  }
+
+  .subMenu a {
+    padding: 10px;
+    display: block;
+    text-align: left;
   }
 
   .menu.active {
     right: 0px;
   }
 
-  .itemMenu {
-    margin-bottom: 20px;
+  .menuOpen{
+    right: 0;
   }
+
+
 
   .mobile {
     display: block;
@@ -196,6 +221,7 @@
     width: 150px;
     margin-left: 20px;
   }
+  
 }
 
 @media screen and (max-width: 480px) {
