--- a/jsfabrica/src/app/mari_Registro-aparelho/aparelho.module.css
+++ b/jsfabrica/src/app/mari_Registro-aparelho/aparelho.module.css
@@ -12,38 +12,56 @@
     margin: auto;
     margin-top: 1%;
     width: 90%;
+    overflow-x: auto; 
 }
 
-
-
-.botaoPrimario {
+.botaoPrimario, .botaoSecundario {
     background-color: #D23636;
     color: #E5E5E5;
-    margin-top: 30px;
-    margin-left: 25px;
     width: 200px;
     height: 40px;
     font-family: "Jockey One", sans-serif;
     border: none;
     cursor: pointer;
-}
-
-.botaoSecundario {
-    background-color: #D23636;
-    color: #E5E5E5;
-    margin-top: 30px;
-    width: 200px;
-    height: 40px;
-    margin-left: 1450px;
-    margin-bottom: 140px;
-    font-family: "Jockey One", sans-serif;
-    border: none;
-    cursor: pointer;
+    margin: 10px; 
 }
 
 .botoes {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     width: 90%;
-    margin: 20px auto 0 auto;
+    margin: 20px auto;
+    flex-wrap: wrap; 
+}
+
+
+
+@media (max-width: 768px) {
+    .title {
+        font-size: 30px; 
+    }
+
+    .botaoPrimario, .botaoSecundario {
+        width: 150px; 
+        height: 35px;
+    }
+
+    .botoes {
+        justify-content: center; 
+    }
+}
+
+@media (max-width: 480px) {
+    .title {
+        font-size: 24px; 
+    }
+
+    .botaoPrimario, .botaoSecundario {
+        width: 100%; 
+        margin: 5px 0; 
+    }
+
+    .botoes {
+        flex-direction: column; 
+    }
 }
