--- a/jsfabrica/src/components/Header/Header.module.css
+++ b/jsfabrica/src/components/Header/Header.module.css
@@ -3,9 +3,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
-  background-color: var(--backgroundnav);
+  background-color: #530000;
   color: var(--text-color);
   height: 100px;
+  border: solid #000000 3px;
+
 }
 
 .headerDiv {
