--- a/jsfabrica/src/app/mary_Registro-aparelho/aparelho.module.css
+++ b/jsfabrica/src/app/mary_Registro-aparelho/aparelho.module.css
@@ -15,6 +15,10 @@
     overflow-x: auto; 
 }
 
+/* .thead{
+    background-color: rgb(63, 63, 63);
+} */
+
 .botaoPrimario, .botaoSecundario {
     background-color: #D23636;
     color: #E5E5E5;
