--- a/jsfabrica/src/app/globals.css
+++ b/jsfabrica/src/app/globals.css
@@ -27,3 +27,11 @@ th, td {
   padding: 30px;
   font-family: "Jockey One", sans-serif;
 }
+
+h2, h3 {
+  margin-bottom: 10px;
+  font-size: 25px;
+  font-family: "Jockey One", sans-serif;
+  text-align: center;
+  color: #ffff;
+}
