--- a/jsfabrica/src/components/Header/Header.module.css
+++ b/jsfabrica/src/components/Header/Header.module.css
@@ -7,7 +7,8 @@
   color: var(--text-color);
   height: 100px;
   border: solid #000000 3px;
-
+  position: fixed;
+  width: calc(100% - 38px);
 }
 
 .headerDiv {
