--- a/jsfabrica/src/app/mari-r-aparelho/aparelho.module.css
+++ b/jsfabrica/src/app/mari-r-aparelho/aparelho.module.css
@@ -34,6 +34,10 @@
   flex-wrap: wrap;
 }
 
+.container{
+  overflow-x: scroll;
+}
+
 @media (max-width: 768px) {
   .title {
       font-size: 30px;
