--- a/jsfabrica/src/app/maria-r-vendas/registro.module.css
+++ b/jsfabrica/src/app/maria-r-vendas/registro.module.css
@@ -48,6 +48,10 @@
         justify-content: center;
     }
   }
+
+  .container{
+    overflow-x: scroll;
+  }
   
   @media (max-width: 480px) {
     .title {
