--- a/jsfabrica/src/app/bia-c-cliente/cliente.module.css
+++ b/jsfabrica/src/app/bia-c-cliente/cliente.module.css
@@ -10,7 +10,10 @@
     align-items: center;
     z-index: 1000;
   }
+  /*importa
   
+
+  */
   .CadCliente {
     background: linear-gradient(to bottom, #000, #530c0c);
     border-radius: 10px;
