--- a/jsfabrica/src/app/Leticia-c-funcionario/funcionario.module.css
+++ b/jsfabrica/src/app/Leticia-c-funcionario/funcionario.module.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     background: rgba(0, 0, 0, 0.7);
     display: flex;
     justify-content: center;
@@ -15,10 +15,10 @@
     background: linear-gradient(to bottom, #000, #530c0c);
     border-radius: 10px;
     padding: 20px;
-     margin-top: 60px;
     width: 1020px;
+    height: 900px;
     max-width: 600px;
-    min-height: 90vh;
+   
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
     color: white;
     text-align: center;
