--- a/jsfabrica/src/app/Leticia-c-funcionario/funcionario.module.css
+++ b/jsfabrica/src/app/Leticia-c-funcionario/funcionario.module.css
@@ -5,82 +5,79 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
-  overflow: hidden;
+  overflow: hidden; /* Sem rolagem externa */
 }
 
-  
 .CadCliente {
   background: linear-gradient(to bottom, #000, #530c0c);
   border-radius: 10px;
-  padding: 20px;
-  width: 90vw;
+  padding: 2vh;
+  width: 95vw;
+  height: 95vh;
   max-width: 600px;
-  height: auto; /* altura automática */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
   color: white;
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  overflow: hidden; /* Sem rolagem interna */
 }
 
-  .fechar {
-    width: 20px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    cursor: pointer;
-  }
-  
-  .div {
-    margin-top: 50px;
-  }
-  
-  .h1 {
-    font-size: 40px;
-    font-family: "Alata", sans-serif;
-    margin-bottom: 20px;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .label {
-    display: block; 
-    font-family: "Jockey One", sans-serif;
-    color: #a09a9a;
-    text-align: left;
-    margin: 0 0 5px 10%; 
-    width: 80%; 
-  }
-  
-  .input {
-    height: 40px;
-    border-radius: 7px;
-    width: 80%; 
-    margin: 0 auto 10px auto; 
-    background-color: #c4c4c4;
-    font-family: "Jockey One", sans-serif;
-  }
-  
-  .button {
-    background-color: #d23636;
-    color: #e5e5e5;
-    border: none;
-    border-radius: 7px;
-    width: 50%;
-    margin: 30px auto;
-    padding: 10px;
-    cursor: pointer;
-    font-family: "Jockey One", sans-serif;
-  }
-   /*
-VAIIIIIIIIIIIIIIIIIIIIIII
-   */
+.fechar {
+  width: 20px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.div {
+  margin-top: 1vh;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.h1 {
+  font-size: 3vh;
+  font-family: "Alata", sans-serif;
+  margin-bottom: 1vh;
+}
+
+.label {
+  font-family: "Jockey One", sans-serif;
+  color: #a09a9a;
+  text-align: left;
+  margin: 0 0 0.5vh 10%;
+  font-size: 1.8vh;
+}
+
+.input {
+  height: 4vh;
+  border-radius: 7px;
+  width: 80%;
+  margin: 0 auto 1vh auto;
+  background-color: #c4c4c4;
+  font-family: "Jockey One", sans-serif;
+  font-size: 1.6vh;
+}
+
+.button {
+  background-color: #d23636;
+  color: #e5e5e5;
+  border: none;
+  border-radius: 7px;
+  width: 50%;
+  margin: 2vh auto;
+  padding: 1vh;
+  cursor: pointer;
+  font-family: "Jockey One", sans-serif;
+  font-size: 2vh;
+}
