--- a/jsfabrica/src/app/luiz-r-funcionarios/r-funcionarios.module.css
+++ b/jsfabrica/src/app/luiz-r-funcionarios/r-funcionarios.module.css
@@ -63,10 +63,32 @@
   font-size: 16px;
 }
 
-.botaoPesquisa:hover {
-  background-color: #E5E5E5;
+
+
+.botaoExcluir{
+  background-color:#807f7f;
+  padding: 8px 16px;
+  color: white;
+  border-radius: 6px ;
+  cursor: pointer;
+  font-size: 16px;
+
 }
 
+.botaoAtualizar{
+  background-color:#5c0606;
+  padding: 8px 9px;
+  color: white;
+  border-radius: 6px ;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.botoes{
+  display: flex;
+  justify-content: center;
+  
+}
 
   /* llako */
   
