--- a/jsfabrica/src/app/mari-r-aparelho/aparelho.module.css
+++ b/jsfabrica/src/app/mari-r-aparelho/aparelho.module.css
@@ -84,6 +84,29 @@
   background-color: #c0392b;
 }
 
+.botaoExcluir{
+  background-color:#807f7f;
+  padding: 8px 16px;
+  color: white;
+  border-radius: 6px ;
+  cursor: pointer;
+  font-size: 16px;
+
+}
+
+.botaoAtualizar{
+  background-color:#5c0606;
+  padding: 8px 9px;
+  color: white;
+  border-radius: 6px ;
+  cursor: pointer;
+  font-size: 16px;
+}
+.botoes{
+  display: flex;
+  justify-content: center;
+  
+}
 
 
 @media (max-width: 768px) {
